changed css again to fix weird margin spacing issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -149,7 +149,6 @@ body {
 #topic {
   width: 642px;
   margin: 0 auto;
-  padding: 92px 0 50px;
 }
 
 #newgamebutton {
